# emotion-steering-lab

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml  security.yml
.streamlit/: config.toml
art/: __init__.py
artifacts/: qc_drop_summary.jsonl
schemas/: diagnosis.schema.json  probe_artifact.schema.json  probe_data.schema.json  steering_profile.schema.json  steering_results.schema.json
scripts/: check_contracts.py  cloud_quickstart.sh  setup.sh
src/art/: __init__.py  cli.py  constants.py  errors.py  repro.py  ui_app.py
src/art/artifacts/: paths.py  read.py  write.py
src/art/backends/: __init__.py  base.py  factory.py  mock_backend.py  transformerlens_backend.py  transformers_backend.py
src/art/data/: __init__.py  generate.py
src/art/probes/: __init__.py  dataset.py  diagnose.py  train.py  vectorize.py
src/art/schemas/: __init__.py  loader.py  validator.py
src/art/steering/: __init__.py  engine.py  profile.py  run.py  sweep.py
tests/: conftest.py  test_backend_factory.py  test_data_generate.py  test_integration_pipeline.py  test_probe_train.py  test_steer_run.py  test_transformers_backend_utils.py  test_ui_resume.py
