[project]
name = "steering-framework"
version = "0.1.0"
description = "Open-source inference-time steering framework"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { file = "LICENSE" }
dependencies = [
  "jsonschema>=4.22.0",
  "numpy>=1.26.0",
  "PyYAML>=6.0.1",
  "requests>=2.32.3",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]
ui = [
  "streamlit>=1.34.0"
]
hf = [
  "torch>=2.2.0",
  "transformers>=4.41.0,<6"
]

[project.scripts]
art = "art.cli:main"
steer = "art.cli:main"
steer-ui = "art.ui_app:launch"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/art"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
